--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
-  width: 10000px;
+  width: 400px;
   background: white;
   display: inline-block;
   text-align: center;
   float: left;
+  border: red;
+}
+
+.head{
+  margin: 0px;
 }
 
 .option{
@@ -17,7 +22,7 @@
   border: 2px solid yellow;
 }
 .output{
-  width: 200px;
+  //width: 250px;
   float: left;
   border: 2px solid green;
 }
