--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,12 @@
-.App {
-  width: 400px;
-  //height: 400px;
-  background: lightgreen;
-  //display: inline-block;
-  text-align: center;
-  float: left;
-  border: red;
-}
+.main
+{
+  background: url('./img/kanto.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 0;
+  padding-top: 66.64%;
 
-.head{
-  margin: 0px;
-}
-
-.option{
-  float: left;
-  width: 160px;
-  border: 2px solid blue;
-  background: blue;
-}
-.input{
-  width: 200px;
-  float: left;
-  border: 2px solid yellow;
-  background: yellow;
-}
-.output{
-  //width: 250px;
-  float: left;
-  border: 2px solid green;
-  background: green;
-}
-.acc{
-  width: 160px;
-  float: left;
-  border: 2px solid purple;
-  background: purple;
-}
-.stage{
-  width: 160px;
-  float: left;
-  border: 2px solid lightblue;
-  background: lightblue;
-}
-.health{
-  width: 160px;
-  float: left;
-  border: 2px solid lime;
-  background: lime;
-}
-.type{
-  margin-top: 340px;
-  background: #653ee0;
-}
-.stats{
-  width: 120px;
-  float: left;
-  border: 2px solid purple;
-  background: purple;
-}
-input {
-    width: 80%;
-}
-.display{
-  width: 400px;
-  height: 100%;
+  display: grid;
+  grid-template-rows: 100px auto 100px;
 }
